[package]
name = "rocket"
version = "0.1.0"
authors = ["calum"]

[dependencies]
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = "0.3.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "*", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "*"
r2d2 = "0.8"
